Formatting clean-up

--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-13.htm
@@ -1,174 +1,71 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Debugging your programs
-    </title>
-  </head>
-  <body>
-    <h1>
-      Debugging your programs
-    </h1>
-    <p>
-      In this section, you will debug a Java program.
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+<title> Debugging your programs </title>
+</head>
+<body>
+<h1> Debugging your programs </h1>
+<p> In this section, you will debug a Java program. </p>
+<ol>
+  <li> In the Package Explorer view in the Java perspective, double-click <em>junit.samples.VectorTest.java</em> 
+    to open it in an editor. </li>
+  <li> Place your cursor on the marker bar (along the left edge of the editor 
+    area) on the following line in the setUp() method: 
+    <p> <code>fFull.addElement (new Integer(1));</code> </p>
+    <p> and double-click to set a breakpoint. </p>
+    <p> <img src="../images/qs-68.gif" alt="VectorTest.java editor showing added breakpoint"> 
     </p>
-    <table border="0" cellspacing="0" cellpadding="3">
-      <tbody>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>1.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the Package Explorer view in the Java perspective, double-click <em>junit.samples.VectorTest.java</em> to open it in an editor.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>2.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Place your cursor on the marker bar (along the left edge of the editor area) on the following line in the setUp() method:
-            </p>
-            <p>
-              <code>fFull.addElement (new Integer(1));</code>
-            </p>
-            <p>
-              and double-click to set a breakpoint.
-            </p>
-            <img src="../images/qs-68.gif" alt="VectorTest.java editor showing added breakpoint"> <em>Note: The breakpoint is blue with no checkmark overlay as the breakpoint is
-            not yet installed, meaning that the containing class has not yet been loaded by the Java VM.</em>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>3.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the Package Explorer view, select the <em>junit.samples</em> package and select the Run menu. Within the Run menu, select Debug As, and then Java Application.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>4.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select the <em>VectorTest - junit.samples - /JUnit</em> item in the dialog, then click <strong>Finish</strong>.
-            </p>
-            <img src="../images/qs-69.gif" alt="Type selection dialog">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>5.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              As soon as the breakpoint is hit, the Debug perspective opens, and execution is suspended. Notice that the process is still active (not terminated) in the Debug
-              view. Other threads might still be running.
-            </p>
-            <img src="../images/qs-70.gif" alt="Debug perspective"> <em>Note: The breakpoint has an overlay icon of a checkmark because it is now installed (VectorTest has been
-            loaded in the Java VM).</em>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>6.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the editor in the Debug perspective, select the entire line where the breakpoint is set, and from its context menu, select <strong>Inspect</strong>.
-            </p>
-            <img src="../images/qs-71.gif" alt="VectorTest.java editor with selected breakpoint line showing context menu">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>7.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The expression is evaluated in the context of the current stack frame, and the results are displayed in the Expressions view.
-            </p>
-            <p>
-              Select the expression in the Expressions view, and from its context menu, select <strong>Remove</strong>.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>8.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The Variables view displays the values of the variables in the selected stack frame.
-            </p>
-            <p>
-              Expand the fFull tree in the Variables view until you can see elementCount.
-            </p>
-            <img src="../images/qs-72.gif" alt="Variables view">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>9.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Watch the variables (e.g., elementCount) in the Variables view as you step through VectorTest in the Debug view:
-            </p>
-            <p>
-              Click the <strong>Step Over</strong> button to step over the highlighted line of code. Execution will continue at the next line in the same method (or, if you are at
-              the end of a method, it will continue in the method from which the current method was called).
-            </p>
-            Note: The variables that are changed as a result of the last step are highlighted in the color specified in the Debug Variable Views &quot;Changed Variable Value
-            Color&quot; preference (the default color is red). <img src="../images/qs-73.gif" alt="TestCase.java editor showing current line of execution">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>10.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              If the program has not executed fully when you are done debugging, select <strong>Terminate</strong> from the context menu of the program&#39;s launch item in the
-              Debug view.
-            </p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+    <em>Note: The breakpoint is blue with no checkmark overlay as the breakpoint 
+    is not yet installed, meaning that the containing class has not yet been loaded 
+    by the Java VM.</em> </li>
+  <li> In the Package Explorer view, select the <em>junit.samples</em> package 
+    and select the Run menu. Within the Run menu, select Debug As, and then Java 
+    Application. </li>
+  <li> Select the <em>VectorTest - junit.samples - /JUnit</em> item in the dialog, 
+    then click <strong>Finish</strong>. 
+    <p> <img src="../images/qs-69.gif" alt="Type selection dialog"> </p>
+  </li>
+  <li> As soon as the breakpoint is hit, the Debug perspective opens, and execution 
+    is suspended. Notice that the process is still active (not terminated) in 
+    the Debug view. Other threads might still be running. 
+    <p> <img src="../images/qs-70.gif" alt="Debug perspective"> </p>
+    <em>Note: The breakpoint has an overlay icon of a checkmark because it is 
+    now installed (VectorTest has been loaded in the Java VM).</em> </li>
+  <li> In the editor in the Debug perspective, select the entire line where the 
+    breakpoint is set, and from its context menu, select <strong>Inspect</strong>. 
+    <p> <img src="../images/qs-71.gif" alt="VectorTest.java editor with selected breakpoint line showing context menu"> 
     </p>
-  </body>
+  </li>
+  <li> The expression is evaluated in the context of the current stack frame, 
+    and the results are displayed in the Expressions view. Select the expression 
+    in the Expressions view, and from its context menu, select <strong>Remove</strong>. 
+  </li>
+  <li> The Variables view displays the values of the variables in the selected 
+    stack frame. Expand the fFull tree in the Variables view until you can see 
+    elementCount. 
+    <p> <img src="../images/qs-72.gif" alt="Variables view"> </p>
+  </li>
+  <li> Watch the variables (e.g., elementCount) in the Variables view as you step 
+    through VectorTest in the Debug view: 
+    <p> Click the <strong>Step Over</strong> button to step over the highlighted 
+      line of code. Execution will continue at the next line in the same method 
+      (or, if you are at the end of a method, it will continue in the method from 
+      which the current method was called). </p>
+    <p> Note: The variables that are changed as a result of the last step are 
+      highlighted in the color specified in the Debug Variable Views &quot;Changed 
+      Variable Value Color&quot; preference (the default color is red). </p>
+    <p> <img src="../images/qs-73.gif" alt="TestCase.java editor showing current line of execution"> 
+    </p>
+  </li>
+  <li> If the program has not executed fully when you are done debugging, select 
+    <strong>Terminate</strong> from the context menu of the program&#39;s launch 
+    item in the Debug view. </li>
+</ol>
+<p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
+</p>
+</body>
 </html>
 
