--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-14.htm
@@ -1,109 +1,45 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Evaluating expressions
-    </title>
-  </head>
-  <body>
-    <h1>
-      Evaluating expressions
-    </h1>
-    <p>
-      In this section, you will evaluate expressions from your Java code.
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+<title> Evaluating expressions </title>
+</head>
+<body>
+<h1> Evaluating expressions </h1>
+<p> In this section, you will evaluate expressions from your Java code. </p>
+<ol>
+  <li> Debug <em>junit.samples.VectorTest.java</em> to a breakpoint at line 26 
+    (see the <a href="qs-13.htm">Debugging your Programs</a> section for full 
+    details).<br>
+    In the Display view in the Debug perspective, type the following line: 
+    <p></p>
+    <p> <code>fFull.size()</code></p>
+    <p> <strong>Note:</strong> Instead of typing the full expression by hand you 
+      can use code assist to complete it. </p>
+  </li>
+  <li> Select the text you just typed, and from its context menu, select <strong>Display</strong> 
+    (or the equivalent item in the Display view toolbar or Run menu). 
+    <p> <img src="../images/qs-74.gif" alt="Display view with fFull.size selected and showing context menu"> 
     </p>
-    <table border="0" cellspacing="0" cellpadding="3">
-      <tbody>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>1.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Debug <em>junit.samples.VectorTest.java</em> to a breakpoint at line 26 (see the <a href="qs-13.htm">Debugging your Programs</a> section for full details).<br>
-               In the Display view in the Debug perspective, type the following line:
-            </p>
-            <p>
-              <code>fFull.size()</code><br>
-              <br>
-               <strong>Note:</strong> Instead of typing the full expression by hand you can use code assist to complete it.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>2.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select the text you just typed, and from its context menu, select <strong>Display</strong> (or the equivalent item in the Display view toolbar or Run menu).
-            </p>
-            <img src="../images/qs-74.gif" alt="Display view with fFull.size selected and showing context menu">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>3.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The expression is evaluated.
-            </p>
-            <img src="../images/qs-75.gif" alt="Display view showing evaluation result: (int) 0">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>4.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              On a new line in the Display view, type the following line:
-            </p>
-            <code>fFull.toArray()</code>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>5.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select this line, and select <strong>Inspect</strong> from the Display view context menu (or the equivalent item in the toolbar or Run menu).
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>6.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The Expressions view opens with the value of the evaluated expression.
-            </p>
-            <img src="../images/qs-76.gif" alt="Expressions view containing fFull.toArray() expression">
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+  </li>
+  <li> The expression is evaluated. 
+    <p> <img src="../images/qs-75.gif" alt="Display view showing evaluation result: (int) 0"> 
     </p>
-  </body>
+  </li>
+  <li> On a new line in the Display view, type the following line: 
+    <p> <code>fFull.toArray()</code> </p>
+  </li>
+  <li> Select this line, and select <strong>Inspect</strong> from the Display 
+    view context menu (or the equivalent item in the toolbar or Run menu). </li>
+  <li> The Expressions view opens with the value of the evaluated expression. 
+    <p> <img src="../images/qs-76.gif" alt="Expressions view containing fFull.toArray() expression"> 
+    </p>
+  </li> 
+</ol>
+<p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
+</p>
+</body>
 </html>
 
