--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-15.htm
@@ -1,135 +1,49 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Evaluating snippets
-    </title>
-  </head>
-  <body>
-    <h1>
-      Evaluating snippets
-    </h1>
-    <p>
-      In this section, you will evaluate Java expressions using the Java scrapbook. The scrapbook can be used to experiment with Java code fragments before putting them into your
-      program.
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+<title> Evaluating snippets </title>
+</head>
+<body>
+<h1> Evaluating snippets </h1>
+<p> In this section, you will evaluate Java expressions using the Java scrapbook. 
+  The scrapbook can be used to experiment with Java code fragments before putting 
+  them into your program. </p>
+<ol>
+  <li> In the Java perspective, click the <strong>Create a Scrapbook Page</strong> 
+    button in the workbench toolbar. </li>
+  <li> In <strong>Enter or select the folder</strong> field, type or browse below 
+    to select the JUnit project root directory (<em>JUnit</em> ). </li>
+  <li> In the <strong>File name</strong> field, type <em>MyScrap</em>. The JPAGE 
+    file extension will be added automatically, if you do not enter it yourself. 
+    <p> <img src="../images/qs-77.gif" alt="Create Java Scrapbook Page wizard"> 
     </p>
-    <table border="0" cellspacing="0" cellpadding="3">
-      <tbody>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>1.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the Java perspective, click the <strong>Create a Scrapbook Page</strong> button in the workbench toolbar.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>2.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In <strong>Enter or select the folder</strong> field, type or browse below to select the JUnit project root directory (<em>JUnit</em> ).
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>3.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the <strong>File name</strong> field, type <em>MyScrap</em>. The JPAGE file extension will be added automatically, if you do not enter it yourself.
-            </p>
-            <img src="../images/qs-77.gif" alt="Create Java Scrapbook Page wizard"> 
-            <p>
-              Click <strong>Finish</strong> when you are done.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>4.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The scrapbook page opens in an editor in the editor area.
-            </p>
-            <img src="../images/qs-78.gif" alt="Package Explorer and editor area of the active perspective">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>5.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the editor, type <em>System.get</em> and then use content assist (Ctrl+Space) to complete the snippet as <em>System.getProperties()</em>.
-            </p>
-            <img src="../images/qs-79.gif" alt="Content proposals popup">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>6.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select the entire line you just typed and select <strong>Display</strong> from the context menu or select the equivalent item the editor toolbar or
-              <strong>Run</strong> menu.
-            </p>
-            <img src="../images/qs-80.gif" alt="Snippet editor with System.getProperties() selected showing context menu">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>7.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              When the evaluation completes, the result of the evaluation is highlighted in the scrapbook page.
-            </p>
-            <p>
-              Note: Snippets can be inspected and run in a similar manner.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>8.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Save and close the snippet file by clicking the <strong>Close</strong> button in the view toolbar and then selecting <strong>Yes</strong> in the Save dialog.
-            </p>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+    Click <strong>Finish</strong> when you are done. </li>
+  <li> The scrapbook page opens in an editor in the editor area. 
+    <p> <img src="../images/qs-78.gif" alt="Package Explorer and editor area of the active perspective"> 
     </p>
-  </body>
+  </li>
+  <li> In the editor, type <em>System.get</em> and then use content assist (Ctrl+Space) 
+    to complete the snippet as <em>System.getProperties()</em>. 
+    <p> <img src="../images/qs-79.gif" alt="Content proposals popup"> </p>
+  </li>
+  <li> Select the entire line you just typed and select <strong>Display</strong> 
+    from the context menu or select the equivalent item the editor toolbar or 
+    <strong>Run</strong> menu. 
+    <p> <img src="../images/qs-80.gif" alt="Snippet editor with System.getProperties() selected showing context menu"> 
+    </p>
+  </li>
+  <li> When the evaluation completes, the result of the evaluation is highlighted 
+    in the scrapbook page. <br>
+    Note: Snippets can be inspected and run in a similar manner. </li>
+  <li> Save and close the snippet file by clicking the <strong>Close</strong> 
+    button in the view toolbar and then selecting <strong>Yes</strong> in the 
+    Save dialog. </li>
+</ol>
+<p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
+</p>
+</body>
 </html>
 
