--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-6.htm
@@ -20,37 +20,48 @@
       <li> from the keyboard by pressing F4 after selecting&nbsp;<em>TestCase.java</em>.&nbsp; 
       </li>
       <li> by using drag and drop by dropping TestCase.java to an open hierarchy 
-        view. </li>
+        view.
+	  </li>
     </ul>
+	<p>
     <img src="../images/qs-28.gif" alt="Context menu" height="302" width="306">
+	</p>
   </li>
   <li> In the Hierarchy view, click the&nbsp;<strong>Show the Type Hierarchy&nbsp;</strong>button 
     to see the class hierarchy, including the base classes and subclasses. The 
     small arrow on the left side of the type icon of TestCase indicates that the 
-    hierarchy was opened on this type. <br>
+    hierarchy was opened on this type.
+	<p>
     <img src="../images/qs-29.gif" alt="Type hierarchy" height="156" width="229"> 
+	</p>
   </li>
   <li> Click the&nbsp;<strong>Show the Supertype Hierarchy</strong> button to 
     see a hierarchy showing the type&#39;s parent elements including implemented 
-    interfaces,&nbsp; i.e., the results of going up the type hierarchy. <br>
+    interfaces,&nbsp; i.e., the results of going up the type hierarchy.
+	<p>
     <img src="../images/qs-30.gif" alt="Supertype hierarchy" height="264" width="240"> 
-    <br>
+	</p>
     In this &quot;reversed hierarchy&quot; view, you can see that TestCase implements 
     the Test interface. </li>
   <li> Click the&nbsp;<strong>Show the Subtype Hierarchy</strong> button in the 
-    view toolbar. <br>
+    view toolbar.
+	<p>
     <img src="../images/qs-31.gif" alt="Subtype hierarchy" height="120" width="240"> 
+	</p>
   </li>
   <li> Click the&nbsp;<strong>Lock View and Show Members in Hierarchy</strong> 
     button in the toolbar of the member pane, then select the runTest() method 
     in the member pane. The view will now show all the types implementing runTest(). 
-    <br>
+	<p>
     <img src="../images/qs-32.gif" alt="Subtype hierarchy showing method implementors" height="556" width="262"> 
+	</p>
   </li>
   <li> In the Hierarchy view, click the&nbsp;<strong>Show the Supertype Hierarchy</strong> 
     button. Then on the member pane, select <code>countTestCases()</code> to display 
-    the places where this method is overridden. <br>
+    the places where this method is overridden.
+	<p>
     <img src="../images/qs-33.gif" alt="Supertype hierarchy showing method implementors" height="254" width="269"> 
+	</p>
   </li>
   <li> In the Hierarchy view select the Test element and select&nbsp;<strong>Focus 
     On &#39;Test&#39;</strong> from its context menu.&nbsp; The resource containing 
@@ -60,13 +71,17 @@
     Use&nbsp;<strong>Open Type Hierarchy</strong> from its context menu. A hierarchy 
     is opened containing all classes of the package. For completion of the tree, 
     the hierarchy also shows some classes from other packages. These types are 
-    shown by a type icon with a white fill.&nbsp; <br>
+    shown by a type icon with a white fill.&nbsp;
+	<p>
     <img src="../images/qs-33a.gif" alt="Hierarchy on a package" height="226" width="263"> 
+	</p>
   </li>
   <li> Use&nbsp;<strong>Previous Hierarchy Inputs</strong> to go back to a previously 
     opened element. Click on the arrow next to the button to see a menu or click 
-    on the button to edit the history list. <br>
+    on the button to edit the history list.
+	<p>
     <img src="../images/qs-33b.gif" alt="History menu" height="226" width="263"> 
+	</p>
   </li>
   <li> From the menu bar, select&nbsp;<strong>Window &gt; Preferences</strong>. 
     Go to&nbsp;<strong>Java</strong> and select&nbsp;<strong>Open a new Type Hierarchy 
@@ -76,10 +91,10 @@
     the selected type is shown in a new perspective (the Hierarchy perspective), 
     and its source is shown in the Java editor.&nbsp; By setting the preference 
     option for viewing type hierarchy perspectives, you can have more than one 
-    type hierarchy in your workbench and switch between them as needed. <br>
-    <br>
-    You can also configure a new perspective to open in a new window under&nbsp;<strong>Window 
-    &gt; Preferences &gt; Workbench &gt; Perspectives</strong>. </li>
+    type hierarchy in your workbench and switch between them as needed.
+	You can also configure a new perspective to open in a new window under&nbsp;<strong>Window 
+    &gt; Preferences &gt; Workbench &gt; Perspectives</strong>.
+  </li>
 </ol>
 <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"> 
 <p> <a href="../concepts/concepts-7.htm">Java views</a> </p>
@@ -91,7 +106,6 @@
 <p> <a href="../reference/ref-type-hierarchy.htm">Type Hierarchy view</a><br>
   <a href="../reference/ref-13.htm">Java Base preference page</a> </p>
 <p>
-  <br>
   <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
 </p>
 </body>
