--- a/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/gettingStarted/qs-12.htm
@@ -1,173 +1,74 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0//EN">
 <html>
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-    <meta http-equiv="Content-Style-Type" content="text/css">
-    <link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
-    <title>
-      Running your programs
-    </title>
-  </head>
-  <body>
-    <h1>
-      Running your programs
-    </h1>
-    <p>
-      In this section, you will learn more about running Java programs in the workbench.
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
+<meta http-equiv="Content-Style-Type" content="text/css">
+<link rel="stylesheet" href="../book.css" charset="ISO-8859-1" type="text/css">
+<title> Running your programs </title>
+</head>
+<body>
+<h1> Running your programs </h1>
+<p> In this section, you will learn more about running Java programs in the workbench. 
+</p>
+<ol>
+  <li> In the Package Explorer view, find <em>junit.textui.TestRunner.java</em> 
+    and double-click it to open it in an editor. </li>
+  <li> In the Outline view, notice that the TestRunner class has an icon which 
+    indicates that this class defines a <code>main</code> method. 
+    <p> <img src="../images/qs-58.gif" alt="Outline view with selected TestRunner class"> 
     </p>
-    <table border="0" cellspacing="0" cellpadding="3">
-      <tbody>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>1.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the Package Explorer view, find <em>junit.textui.TestRunner.java</em> and double-click it to open it in an editor.
-            </p>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>2.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              In the Outline view, notice that the TestRunner class has an icon which indicates that this class defines a <code>main</code> method.
-            </p>
-            <img src="../images/qs-58.gif" alt="Outline view with selected TestRunner class">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>3.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Using the drop-down <strong>Run</strong> button in the toolbar, select <strong>Java Application</strong> from the cascading <strong>Run As</strong> menu. This will
-              launch the class in the active editor, or the selected class in the Navigator, as a local Java application.
-            </p>
-            <img src="../images/qs-59.gif" alt="Run drop down menu">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>4.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Notice that the program has run and the following message appears in the Console view telling you that the program needs an execution argument.
-            </p>
-            <img src="../images/qs-60.gif" alt="Console with error message: Usage: TestRunner [-wait] testCaseName, where name is the name of the TestCase class">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>5.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Using the drop-down <strong>Run</strong> menu in the toolbar, select <strong>Run...</strong>.
-            </p>
-            <img src="../images/qs-61.gif" alt="Run menu of the toolbar">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>6.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              The Launch Configurations dialog opens, and the TestRunner launch configuration is selected. When you ran the program using the Java Application shortcut, a launch
-              configuration was automatically created with default settings to launch the selected class.
-            </p>
-            <img src="../images/qs-62.gif" alt="Launch configuration dialog showing the Main tab">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>7.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select the Arguments tab and type <em>junit.samples.VectorTest</em> in the Program arguments area.
-            </p>
-            <img src="../images/qs-63.gif" alt="Arguments tab of the launch configuration dialog">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>8.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Click <strong>Run</strong>. This time the program runs correctly, indicating the number of tests that were run.
-            </p>
-            <img src="../images/qs-64.gif" alt="Console showing program output">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>9.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Switch to the Debug perspective. In the Debug view, notice that a launch was registered each time the program was run.
-            </p>
-            <img src="../images/qs-65.gif" alt="Debug view showing two terminated run launches"> <em>Note: You can relaunch any of these processes by selecting
-            <strong>Relaunch</strong> from its context menu.</em>
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>10.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              Select the drop-down menu from the <strong>Run</strong> button in the workbench toolbar. This list contains the previously launched configurations. Configurations
-              can be relaunched by selecting them in this history list as well.
-            </p>
-            <img src="../images/qs-66.gif" alt="Run drop down menu from the workbench toolbar">
-          </td>
-        </tr>
-        <tr>
-          <td valign="top" align="left">
-            <p>
-              <strong>11.</strong>
-            </p>
-          </td>
-          <td valign="top" align="left">
-            <p>
-              From the context menu in the Debug view (or the equivalent toolbar button), select <strong>Remove All Terminated</strong> to clear the view of terminated launches.
-            </p>
-            <img src="../images/qs-67.gif" alt="Debug view showing context menu">
-          </td>
-        </tr>
-      </tbody>
-    </table>
-    <p>
-      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a>
+  </li>
+  <li> Using the drop-down <strong>Run</strong> button in the toolbar, select 
+    <strong>Java Application</strong> from the cascading <strong>Run As</strong> 
+    menu. This will launch the class in the active editor, or the selected class 
+    in the Navigator, as a local Java application. 
+    <p> <img src="../images/qs-59.gif" alt="Run drop down menu"> </p>
+  </li>
+  <li> Notice that the program has run and the following message appears in the 
+    Console view telling you that the program needs an execution argument. 
+    <p> <img src="../images/qs-60.gif" alt="Console with error message: Usage: TestRunner [-wait] testCaseName, where name is the name of the TestCase class"> 
     </p>
-  </body>
+  </li>
+  <li> Using the drop-down <strong>Run</strong> menu in the toolbar, select <strong>Run...</strong>. 
+    <p> <img src="../images/qs-61.gif" alt="Run menu of the toolbar"> </p>
+  </li>
+  <li> The Launch Configurations dialog opens, and the TestRunner launch configuration 
+    is selected. When you ran the program using the Java Application shortcut, 
+    a launch configuration was automatically created with default settings to 
+    launch the selected class. 
+    <p> <img src="../images/qs-62.gif" alt="Launch configuration dialog showing the Main tab"> 
+    </p>
+  </li>
+  <li> Select the Arguments tab and type <em>junit.samples.VectorTest</em> in 
+    the Program arguments area. 
+    <p> <img src="../images/qs-63.gif" alt="Arguments tab of the launch configuration dialog"> 
+    </p>
+  </li>
+  <li> Click <strong>Run</strong>. This time the program runs correctly, indicating 
+    the number of tests that were run. 
+    <p> <img src="../images/qs-64.gif" alt="Console showing program output"> </p>
+  </li>
+  <li> Switch to the Debug perspective. In the Debug view, notice that a launch 
+    was registered each time the program was run. 
+    <p> <img src="../images/qs-65.gif" alt="Debug view showing two terminated run launches"> 
+    </p>
+    <em>Note: You can relaunch any of these processes by selecting <strong>Relaunch</strong> 
+    from its context menu.</em> </li>
+  <li> Select the drop-down menu from the <strong>Run</strong> button in the workbench 
+    toolbar. This list contains the previously launched configurations. Configurations 
+    can be relaunched by selecting them in this history list as well. 
+    <p> <img src="../images/qs-66.gif" alt="Run drop down menu from the workbench toolbar"> 
+    </p>
+  </li>
+  <li> From the context menu in the Debug view (or the equivalent toolbar button), 
+    select <strong>Remove All Terminated</strong> to clear the view of terminated 
+    launches. 
+    <p> <img src="../images/qs-67.gif" alt="Debug view showing context menu"> 
+    </p>
+  </li>
+</ol>
+<p> <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" height="14" width="324"></a> 
+</p>
+</body>
 </html>
 
